css/derezzball.css
body {
  background-image: url("../images/derezzball_bg_3.png");
  background-size: cover;
  background-position: 50%;
}

html {
  height: 100vh;
  overflow: hidden;
  width: 100%;
  min-width: 891px;
}

canvas {
  margin: 0 auto;
  display: block;
  border: 2px solid yellow;
  box-shadow: inset 0px 0px 24px yellow;
  position: relative;
  z-index: 20;
  cursor: cell;
}

.title {
  display: block;
  font-family: 'open sans', sans-serif;
  font-size: 48px;
  color: #161622;
  text-shadow: -2px 2px yellow;
  text-align: center;
  width: 500px;
  min-width: 450px;
  margin: 24px auto;
  animation: shadow 2s;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 1s;
      -webkit-animation-duration: 2s;
  -moz-animation: shadow 2s;
}

@-webkit-keyframes shadow {
    0%    { text-shadow:  3px  3px #cbecf5; }
    25%   { text-shadow: -3px -3px yellow;  }
    75%   { text-shadow:  3px -3px #cbecf5; }
    100%  { text-shadow: -3px  3px yellow;  }
}

.home-page-link {
  position: absolute;
  top: 150px;
  left: 50%;
  transform: translateX(380px);
}

.profile-pic {
  width: 50px;
  border: 3px solid #b9eaf6;
  border-radius: 5px;
  z-index: 1;
  transition: border .24s ease-in-out;
    -moz-transition: border .24s ease-in-out;
    -webkit-transition: border .24s ease-in-out;
  transition: box-shadow .24s ease-in-out;
    -moz-transition: box-shadow .24s ease-in-out;
    -webkit-transition: box-shadow .24s ease-in-out;
  animation: slide-down-glow 3s;
    -webkit-animation-name: slide-down-glow;
      -webkit-animation-delay: 0s;
        -webkit-animation-duration: 3s;
    -moz-animation: slide-down-glow 3s;
}


@-webkit-keyframes slide-down-glow {
  0%   { transform: translate(0%, -888%); }
  30%  { transform: translate(0%, -888%); }
  60%  { transform: translate(0%, 0%);    }
  61%  { border: 3px solid #b9eaf6;       }
  62%  { border: 3px solid yellow;        }
  70%  { box-shadow: 0px 0px 0px #cbecf5; }
  80%  { box-shadow: 0px 0px 20px #cbecf5;}
  80%  { border: 3px solid yellow;        }
  100% { box-shadow: 0px 0px 0px #cbecf5; }
}

.profile-pic:hover {
  border: 3px solid yellow;
  box-shadow: 0px 0px 20px #cbecf5;
}

.github-wrapper {
  position: absolute;
  top: 221px;
  left: 50%;
  transform: translateX(381px);
}

.fa-github-square {
  font-size: 63px;
  color: #b9eaf6;
  text-decoration: none;
  transition: color .24s ease-in-out;
    -moz-transition: color .24s ease-in-out;
    -webkit-transition: color .24s ease-in-out;
  transition: text-shadow .24s ease-in-out;
    -moz-transition: text-shadow .24s ease-in-out;
    -webkit-transition: text-shadow .24s ease-in-out;
  animation: slide-down-glow-1 4.166s;
    -webkit-animation-name: slide-down-glow-1;
      -webkit-animation-delay: 0s;
        -webkit-animation-duration: 4.166s;
    -moz-animation: slide-down-glow-1 4.166s;
}

@-webkit-keyframes slide-down-glow-1 {
  0%   { transform: translate(0%, -888%);  }
  0%   { opacity: 0;                       }
  60%  { opacity: 0;                       }
  61%  { opacity: 1;                       }
  61%  { color: #b9eaf6;                   }
  62%  { transform: translate(0%, -120%);  }
  90%  { transform: translate(0%, 0%);     }
  90%  { color: yellow;                    }
}

.fa-github-square:hover {
  color: yellow;
  text-shadow: 0px 0px 3px #cbecf5;
}

.linkedin-wrapper {
  position: absolute;
  top: 295px;
  left: 50%;
  transform: translateX(381px);
}

.fa-linkedin {
  font-size: 63px;
  color: #b9eaf6;
  text-decoration: none;
  transition: color .24s ease-in-out;
    -moz-transition: color .24s ease-in-out;
    -webkit-transition: color .24s ease-in-out;
  transition: text-shadow .24s ease-in-out;
    -moz-transition: text-shadow .24s ease-in-out;
    -webkit-transition: text-shadow .24s ease-in-out;
  animation: slide-down-glow-2 4.166s;
    -webkit-animation-name: slide-down-glow-2;
      -webkit-animation-delay: 0s;
        -webkit-animation-duration: 4.166s;
    -moz-animation: slide-down-glow-2 4.166s;
}

@-webkit-keyframes slide-down-glow-2 {
  0%   { transform: translate(0%, -888%);  }
  0%   { opacity: 0;                       }
  60%  { opacity: 0;                       }
  61%  { opacity: 1;                       }
  61%  { color: #b9eaf6;                   }
  61%  { transform: translate(0%, -234%);  }
  90%  { transform: translate(0%, 0%);     }
  90%  { color: yellow;                    }
}

.fa-linkedin:hover {
  color: yellow;
  text-shadow: 0px 0px 3px #cbecf5;
}

.joey {
  font-family: 'Audiowide', cursive;
  text-align: center;
  width: 490px;
  min-width: 490px;
  margin: 14px auto;
  font-size: 24px;
  color: #b9ecff;
  text-shadow: 0px 0px 4px #0081b1;
  animation: glow 8s;
  animation-iteration-count: infinite;
  animation-timing-function: cubic-bezier();
  -webkit-animation-name: glow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 8s;
  -moz-animation: glow 8s;
}

@-webkit-keyframes glow {
    0%    { text-shadow: none; }
    25%   { text-shadow: 0px 0px 4px #0081b1, 0px 0px 8px #0081b1; }
    50%   { text-shadow: none; }
    75%   { text-shadow: 0px 0px 4px #0081b1, 0px 0px 8px #0081b1;}
    100%  { text-shadow: none; }
}

#derezzball {
  font-family: 'Audiowide', cursive;
  font-size: 36px;
  color: orange;
  position: absolute;
  width: auto;
  text-align: center;
  /* visibility: hidden; */
  transform: translateX(-143px);
  animation: shadow 2s;
  animation-iteration-count: infinite;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: .800s;
  -moz-animation: shadow 2s;
}
#speedup {
  font-family: 'Audiowide', cursive;
  font-size: 24px;
  color: orange;
  position: absolute;
  width: 400px;
  text-align: center;
  /* visibility: hidden; */
  transform: translateX(-200px);
  animation: shadow 2s;
  animation-iteration-count: infinite;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: .800s;
  -moz-animation: shadow 2s;
}
#sharp {
  font-family: 'Audiowide', cursive;
  font-size: 24px;
  color: orange;
  position: absolute;
  width: auto;
  text-align: center;
  /* visibility: hidden; */
  transform: translateX(-52px);
  animation: shadow 2s;
  animation-iteration-count: infinite;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: .800s;
  -moz-animation: shadow 2s;

  top: 0px;
}
#crazy {
  font-family: 'Audiowide', cursive;
  font-size: 88px;
  color: orange;
  position: absolute;
  width: 500px;
  text-align: center;
  top: 400px;
  left: 50%;
  transform: translate(-251px, -221px);
  visibility: hidden;
  z-index: 99;
  animation: shadow 2s;
  animation-iteration-count: infinite;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: .800s;
  -moz-animation: shadow 2s;
}

#derezzed {
  font-family: 'Audiowide', cursive;
  font-size: 36px;
  color: orange;
  position: absolute;
  width: 380px;
  border: 1px solid red;
  text-align: center;
  left: 0px;
  visibility: hidden;
  animation: shadow 2s;
  animation-iteration-count: infinite;
  -webkit-animation-name: shadow;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: .800s;
  -moz-animation: shadow 2s;
}

#click-to-start {
  display: block;
  font-family: 'Audiowide', cursive;
  font-size: 48px;
  color: #b9ecff;
  position: absolute;
  line-height: 220px;
  top: 245px;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  width: 900px;
  text-shadow: 0px 0px 8px #0081b1, 0px 0px 8px #0081b1, 0px 0px 16px #0081b1;
  text-align: center;
  animation: blink 4s;
  animation-iteration-count: infinite;
  animation-timing-function: step-end;
  -webkit-animation-name: blink;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 4s;
  -moz-animation: blink 4s;
}

#click-to-reset {
  z-index: 19;
  font-family: 'Audiowide', cursive;
  font-size: 48px;
  color: #b9ecff;
  position: absolute;
  top: 352px;
  margin-left: auto;
  margin-right: auto;
  line-height: 48px;
  left: 0;
  right: 0;
  width: 900px;
  text-shadow: 0px 0px 8px #0081b1, 0px 0px 8px #0081b1, 0px 0px 16px #0081b1;
  text-align: center;
  visibility: hidden;
  cursor: cell;
  animation: blink 4s;
  animation-iteration-count: infinite;
  animation-timing-function: step-end;
  -webkit-animation-name: blink;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 4s;
  -moz-animation: blink 4s;
}

@-webkit-keyframes blink {
    0%    { opacity: 1; }
    25%   { opacity: 0; }
    50%   { opacity: 1; }
    75%   { opacity: 0; }
    100%  { opacity: 1; }
}

#ring-1-wrapper {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  visibility: visible;
  width: 893px;
  top: 410px;
  left: 0;
  right: 0;
}
#ring-2-wrapper {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  visibility: visible;
  width: 893px;
  top: 400px;
  left: 0;
  right: 0;
}
#ring-3-wrapper {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  visibility: visible;
  width: 893px;
  top: 390px;
  left: 0;
  right: 0;
}

#ring-1 {
  border: 10px solid #b9ecff;
  margin: auto;
  height: 88px;
  width: 88px;
  border-radius: 88px;
  box-shadow: 0px 0px 16px #0081b1, 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1;
  animation: blink1 4s;
  animation-iteration-count: infinite;
  animation-timing-function: ease;
  -webkit-animation-name: blink1;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 4s;
  -moz-animation: blink1 4s;
  }

@-webkit-keyframes blink1 {
  0%   { opacity: 0 }
  25%  { opacity: 0 }
  50%  { opacity: 0 }
  75%  { opacity: 1 }
  100% { opacity: 0 }
}

#ring-2 {
  border: 10px solid #b9ecff;
  margin: auto;
  height: 108px;
  width: 108px;
  border-radius: 100px;
  box-shadow: 0px 0px 16px #0081b1, 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1;
  animation: blink2 4s;
  animation-iteration-count: infinite;
  animation-timing-function: ease;
  -webkit-animation-name: blink2;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 4s;
  -moz-animation: blink2 4s;
}

@-webkit-keyframes blink2 {
  0%   { opacity: 0 }
  25%  { opacity: 0 }
  50%  { opacity: 1 }
  75%  { opacity: 0 }
  100% { opacity: 0 }
}

#ring-3 {
  border: 10px solid #b9ecff;
  margin: auto;
  height: 128px;
  width: 128px;
  border-radius: 120px;
  box-shadow: 0px 0px 16px #0081b1, 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1, inset 0px 0px 16px #0081b1;
  animation: blink3 4s;
  animation-iteration-count: infinite;
  animation-timing-function: ease;
  -webkit-animation-name: blink3;
    -webkit-animation-delay: 0s;
      -webkit-animation-duration: 4s;
  -moz-animation: blink3 4s;
}

@-webkit-keyframes blink3 {
  0%   { opacity: 0 }
  25%  { opacity: 1 }
  50%  { opacity: 0 }
  75%  { opacity: 0 }
  100% { opacity: 0 }
}

